<resources>
    <string name="app_name">SavePet</string>
    <string name="url">http://ec2-3-14-66-171.us-east-2.compute.amazonaws.com/api/</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir contraseña</string>
    <string name="registrarme">Registrame</string>
    <string name="registrar">Registrar</string>
    <string name="unirse">Unirse</string>
    <string name="abandonar">Abandonar</string>
    <string name="autor">Autor:</string>
    <string name="mensaje">Mensaje</string>
    <string name="eres_dueño">Eres el creador del evento</string>
    <string name="tu_mismo">El participante eres tu</string>
    <string name="creador">Tu eres el creador del mensaje</string>
    <string name="actualizar">Actualizar</string>
    <string name="sin_participantes">Sin participantes</string>
    <string name="ya_unido">Ya estás unido a este evento</string>
    <string name="no_asistente">No eres un asistente a este evento</string>
    <string name="abandonado_exito">Abandonado con éxito</string>
    <string name="unido_exito">Unido con éxito</string>
    <string name="no_sitio">El aforo está lleno</string>
    <string name="uniendose">Uniendose</string>
    <string name="abandonando">Uniendose</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="usuarios">Comunidad</string>
    <string name="action_settings">Settings</string>
    <string name="animales">Animales</string>
    <string name="eventos">Eventos</string>
    <string name="tab_animales">Animales</string>
    <string name="tab_mis_animales">Mis Animales</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Preferencias de cuenta</string>
    <string name="menu_send">Mensajes</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="registro">¿Todavía no estás registrado?</string>
    <string name="necesitas_login">Necesitas estar logueado para esta funcionalidad</string>
    <string name="MisPreferencias">ArchivoPreferencias</string>
    <string name="apiToken">Apitoken</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="desde_camara">Cámara</string>
    <string name="desde_galeria">Galería</string>
    <string name="raza">Raza</string>
    <string name="tipo_animal">Tipo animal</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="email_invalido">Introduce un email válido</string>
    <string name="nombre_usuario_necesario">El nombre de usuario es necesario</string>
    <string name="nombre_necesario">El nombre es necesario</string>
    <string name="fecha_necesaria">La fecha es necesario</string>
    <string name="aforo_necesario">El aforo es necesario</string>
    <string name="localizacion_necesaria">La localización es necesario</string>
    <string name="imagen_necesaria">La imágen es necesaria</string>
    <string name="fecha_evento">Fecha evento</string>
    <string name="fecha">Fecha:</string>
    <string name="localizacion">Localización</string>
    <string name="afoto">Aforo</string>
    <string name="contraseñas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="aún_no_animales">Todavía no has registrado ningún animal</string>
    <string name="aún_no_evento_propio">Todavía no has registrado ningún evento</string>
    <string name="aún_no_evento">Todavía no se han registrado eventos</string>
    <string name="decripcion">Descripción</string>
    <string name="numero_animales">Nº animales : </string>
    <string name="informacion_usuario">Información</string>
    <string name="sin_decripcion">Sin descripción</string>
    <string name="sin_informacion">Sin información</string>
    <string name="asistentes">Asistentes : </string>
    <string name="organizador">Organizador : </string>
    <string name="localizacion_card">Localización : </string>
    <string name="eliminado_exito">Eliminado con éxito</string>
    <string name="enviando_mensaje">Enviando mensaje</string>
    <string name="mensaje_exito">Mensaje enviado con éxito</string>
    <string name="aun_no_mensajes_enviados">Aún no has mandado mensajes</string>
    <string name="aun_no_mensajes_recibidos">Sin mensajes</string>
    <string name="mensaje_enviado_exito">Mensaje enviado con éxito</string>
    <string name="mensaje_alta_animal">Registrando animal</string>
    <string name="mensaje_actualizar_animal">Actualizando animal</string>
    <string name="registrando_evento">Registrando evento</string>
    <string name="mensaje_registro_usuario">Registrando usuario</string>
    <string name="descripcion_corta">Descripción corta</string>
    <string name="recycler_animales">recycler_animales</string>
    <string name="fragment_animales">fragment_animales</string>
    <string name="borrar">Borra cuenta</string>
    <string name="usuario_exito">Usuario creado con éxito</string>
    <string name="usuario_borrado">Usuario borrado con éxito</string>
    <string name="usuario_actualizado">Usuario actualizado con éxito</string>
    <string name="usuario_actualizar">Actualizar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="escribir">Escribir</string>
    <string name="sin_animales">Sin animales</string>
    <string name="aceptar">Aceptar</string>
    <string name="usuario_modificado">Usuario modificado con éxito</string>
    <string name="fragment_alta_animales">fragment_alta_animales</string>
    <string name="contraseña_caracteres">La contraseña debe tener un mínimo de 6 caracteres</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_localizacion">No tiene localización</string>
    <string name="sin_imagenes">Sin imágenes</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="estas_seguro_borrar_cuenta">¿Estás seguro de borrar la cuenta?</string>
    <string name="estas_seguro_animal">¿Estás seguro de borrar el animal?</string>
    <string name="estas_seguro_evento">¿Estás seguro de borrar el evento?</string>
    <string name="estas_seguro_cuenta">¿Estás seguro de borrar la cuenta?</string>
    <string name="estas_seguro_borrar_imagen">¿Estás seguro de borrar la foto?</string>
    <string name="internal_storage">Internal storage</string>
    <string name="imagen_exito">Imagen subida con éxito</string>
    <string name="subiendo_imagen">Subiendo imagen</string>
    <string name="borrando_imagen">Borando imagen</string>
    <string name="borrando_animal">Borrando animal</string>
    <string name="borrando_evento">Borrando evento</string>
    <string name="borrar_imagen_exito">Imagen borrada con éxito</string>
    <string name="borrar_animal_exito">Animal borrado con éxito</string>
    <string name="animal_creado_exito">Animal creado con éxito</string>
    <string name="animal_modificado_exito">Animal modificado con éxito</string>
    <string name="evento_creado_exito">Evento creado con éxito</string>
    <string name="evento_actualizado">Evento modificado</string>
    <string name="actualizando_Evento">Actualizando evento</string>
    <string name="km">Km</string>
    <string-array name="tipo_animal">
        <item>Perro</item>
        <item>Gato</item>
        <item>Otros</item>
    </string-array>
    <string-array name="tiempo_evento">
        <item>Actuales</item>
        <item>Pasados</item>
    </string-array>
</resources>
