<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/animales"
            android:icon="@drawable/animales"
            android:title="@string/animales" />
        <item
            android:id="@+id/usuarios"
            android:icon="@drawable/usuarios"
            android:title="@string/usuarios" />
        <item
            android:id="@+id/eventos"
            android:icon="@drawable/eventos"
            android:title="@string/eventos" />
        <item
            android:id="@+id/mensajes"
            android:icon="@drawable/email"
            android:title="@string/menu_send" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/preferencias_cuenta"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
        </menu>
    </item>

</menu>
