<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="Principal">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:checkable="true"
                    android:id="@+id/animales"
                    android:icon="@drawable/animales"
                    android:title="@string/animales" />
                <item
                    android:checkable="true"
                    android:id="@+id/usuarios"
                    android:icon="@drawable/usuarios"
                    android:title="@string/usuarios" />
                <item
                    android:checkable="true"
                    android:id="@+id/eventos"
                    android:icon="@drawable/eventos"
                    android:title="@string/eventos" />
                <item
                    android:checkable="true"
                    android:id="@+id/mensajes"
                    android:icon="@drawable/email"
                    android:title="@string/menu_send" />
                <item
                    android:checkable="true"
                    android:id="@+id/QR"
                    android:icon="@drawable/qrcode_scan"
                    android:title="@string/qr" />
            </group>
        </menu>
    </item>


    <item android:title="Ajustes">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:checkable="true"
                    android:id="@+id/preferencias_cuenta"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_tools" />
            </group>
        </menu>
    </item>

</menu>
