<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/i"
                    android:layout_marginTop="30dip"
                    android:src="@drawable/imagen_default"
                    android:layout_gravity="center"
                    android:layout_width="150dip"
                    android:layout_height="150dip"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_margin="10dip"
                        android:layout_marginTop="0dip"
                        android:id="@+id/nombre_usuario"
                        android:hint="@string/nombre_usuario"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:layout_margin="10dip"
                        android:id="@+id/nombre"
                        android:hint="@string/nombre"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:layout_margin="10dip"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:layout_margin="10dip"
                        android:hint="@string/telefono"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:layout_margin="10dip"
                        android:inputType="textPassword"
                        android:hint="@string/contraseña"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:layout_margin="10dip"
                        android:inputType="textPassword"
                        android:hint="@string/repetir_contraseña"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <Button
                        android:textColor="@android:color/white"
                        android:layout_gravity="right"
                        android:layout_margin="10dip"
                        android:paddingHorizontal="15dip"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/registrarme"
                        android:background="@color/secondaryColor"
                        android:layout_alignParentBottom="true"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>