<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imagen_perfil"
                        android:src="@drawable/animal_placeholder"
                        android:layout_gravity="center"
                        android:layout_width="150dip"
                        android:layout_height="150dip"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <Button
                            android:text="@string/desde_camara"
                            android:id="@+id/imagen_camara"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            />
                        <Button
                            android:text="@string/desde_galeria"
                            android:layout_width="100dp"
                            android:id="@+id/imagen_galeria"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_margin="10dip"
                        android:id="@+id/nombre"
                        android:hint="@string/nombre"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:inputType="text"
                        android:maxLines="1"
                        android:id="@+id/raza"
                        android:layout_margin="10dip"
                        android:hint="@string/raza"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:inputType="text"
                        android:maxLines="1"
                        android:id="@+id/tipo_animal"
                        android:layout_margin="10dip"
                        android:hint="@string/tipo_animal"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:maxLines="1"
                        android:id="@+id/fecha_nacimiento"
                        android:layout_margin="10dip"
                        android:hint="@string/fecha_nacimiento"
                        android:clickable="true"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/descripcion_larga"
                        android:layout_margin="10dip"
                        android:hint="@string/descripcion_corta"
                        android:inputType="text|textMultiLine"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/descripcion_corta"
                        android:layout_margin="10dip"
                        android:hint="@string/decripcion"
                        android:inputType="text|textMultiLine"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/secondaryColor"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/registro"
                        android:textColor="@android:color/white"
                        android:layout_gravity="right"
                        android:layout_margin="10dip"
                        android:paddingHorizontal="15dip"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/registrar"
                        android:background="@color/secondaryColor"
                        android:layout_alignParentBottom="true"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>