<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/localizacion"
               android:focusable="false"
               android:clickable="true"
               android:hint="@string/localizacion"
               android:layout_width="300dp"
               android:layout_height="wrap_content"/>
           <EditText
               android:id="@+id/km"
               android:maxLines="1"
               android:inputType="number"
               android:hint="@string/km"
               android:layout_width="100dp"
               android:layout_height="wrap_content" />
       </LinearLayout>
        <TextView
            android:layout_marginLeft="5dp"
            android:text="@string/tipo_animal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>